--- a/static/pages/artist.html
+++ b/static/pages/artist.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="/static/styles/artist.css" />
   </head>
   <body>
+    <header>
+      <h1>Groupie Tracker</h1>
+      <div class="theme dark">theme</div>
+    </header>
     <div class="artist">
-      <div class="bg" style="background-image: url({{.Image}});"></div>
       <h1 class="name">{{.Name}}</h1>
       <div class="info">
         <div class="image">
