--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -9,13 +9,30 @@
   <body>
     <header>
       <h1>Groupie Tracker</h1>
-      <div class="theme dark">theme</div>
+      <div class="themeWrapper">
+        <svg
+          class="dark"
+          xmlns="http://www.w3.org/2000/svg"
+          height="24px"
+          viewBox="0 -960 960 960"
+          width="24px"
+          fill="var(--text)"
+        >
+          <path
+            d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Zm0-80q88 0 158-48.5T740-375q-20 5-40 8t-40 3q-123 0-209.5-86.5T364-660q0-20 3-40t8-40q-78 32-126.5 102T200-480q0 116 82 198t198 82Zm-10-270Z"
+          />
+        </svg>
+        <input type="checkbox" class="theme" />
+      </div>
     </header>
     <div class="container">
       {{range .}}
       <div data-id="{{.ID}}" class="artist-card">
         <a href="/artist?id={{.ID}}">
-          <div class="image"><img src="{{.Image}}" alt="{{.Name}}" /></div>
+          <div class="image">
+            <div class="creationDate">{{.CreationDate}}</div>
+            <img src="{{.Image}}" alt="{{.Name}}" />
+          </div>
           <div class="nameWraper">
             <p class="placeholder">{{.Name}}</p>
             <p class="name left">{{.Name}}</p>
@@ -25,5 +42,6 @@
       </div>
       {{end}}
     </div>
+    <script src="/static/scripts/index.js"></script>
   </body>
 </html>
