modify html page title

--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Groupie Tracker - Artists</title>
+    <title>Groupie Tracker - Home</title>
     <link rel="stylesheet" href="/static/styles/index.css" />
   </head>
   <header>
