--- a/static/pages/artist.html
+++ b/static/pages/artist.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{.Artist.Artist.name}} - Concert Info</title>
+    <title>{{.Artist.name}}</title>
     <link rel="stylesheet" href="/static/styles/index.css" />
     <link rel="stylesheet" href="/static/styles/artist.css" />
   </head>
