rename section title "Concert Relations" -> "Concerts"

--- a/static/pages/artist.html
+++ b/static/pages/artist.html
@@ -44,7 +44,7 @@
             {{end}}
           </div>
           <div class="section">
-            <div class="title">Concert Relations</div>
+            <div class="title">Concerts</div>
             <div class="locations">
               {{range $location, $dates := .datesLocations}}
               <div class="location">
