--- a/static/pages/artist.html
+++ b/static/pages/artist.html
@@ -48,7 +48,7 @@
             <div class="locations">
               {{range $location, $dates := .datesLocations}}
               <div class="location">
-                <div class="name">{{$location}}:</div>
+                <div class="name">{{$location}}</div>
                 <div class="dates">
                   {{range $dates}}
                   <div class="date">{{.}}</div>
