feat: scrap artist banner from youtube music

--- a/static/pages/artist.html
+++ b/static/pages/artist.html
@@ -27,6 +27,7 @@
   </header>
   <body>
     <div class="artist">
+      <img class="banner" alt="" src="{{.banner}}" />
       <h2 class="name">{{.name}}</h2>
       <div class="info">
         <div class="image">
