--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -6,7 +6,7 @@
     <title>Groupie Tracker - Home</title>
     <link rel="stylesheet" href="/static/styles/index.css" />
   </head>
-  <header>
+  <header class="dim-bg">
     <h1>Groupie Tracker</h1>
     <div class="themeWrapper">
       <svg
