feat(ui): Add shadow for text in artist page

--- a/static/pages/artist.html
+++ b/static/pages/artist.html
@@ -15,7 +15,7 @@
       </div>
       <h2 class="name">{{.name}}</h2>
       <div class="info">
-        <div class="image">
+        <div class="overview">
           <img src="{{.image}}" alt="{{.name}}" />
           <div class="section">
             <p>Year Formed: {{.creationDate}}</p>
